# xdag

./: .gitignore  CMakeLists.txt  Compile.md  Dockerfile  RandomX .md  RandomX.md
client/: CMakeLists.txt  block.c  block.cpp  block.h  commands.c  commands.h  crypt.h  global.c  global.h  hash.c  hash.h  init.c  init.cpp  init.h  main.c  math.c  miner.c  miner.cpp  miner.h  mining_common.c  mining_common.h  netdb.c  network.h  pool.c  pool.cpp  pool.h  rpc_commands.c  rpc_procedure.c  rpc_procedure.h  rpc_procedures.c  rpc_service.c  rpc_service.h  rpc_wrapper.c  rsdb.c  rsdb.cpp  rsdb.h  rx_common.c  rx_common.h  rx_hash.c  rx_hash.cpp  (+38 more)
client/algorithms/: CMakeLists.txt  crc.h  dfslib_types.h  dfsrsa.c  dfsrsa.h  list.h  rbtree.h  sha256.h
client/http/: CMakeLists.txt
client/json-rpc/: CMakeLists.txt  rpc_procedures.c
client/uthash/: CMakeLists.txt
client/utils/: CMakeLists.txt  hashmap.c  hashmap.h  random_utils.c  random_utils.h  string_tools.cpp  string_tools.h  string_utils.c  string_utils.h
client/websocket/: CMakeLists.txt
client/websocket/wslay/: wslay_event.c
cmake/: Protobufc.cmake  UVConfig.cmake
dnet/: CMakeLists.txt  dnet_crypt.c  dnet_crypt.h  dnet_xdag.c
libp2p/: base58.c  base58.h  libp2p.pb-c.c  libp2p.pb-c.h  libp2p.proto  xnet.c  xnet.h
libp2p/mutiaddr/: base58.h  endian.h  multiaddr.c  multiaddr.h  protocols.c  protocols.h  protoutils.c  protoutils.h  varhexutils.c  varhexutils.h  varint.c  varint.h
libp2p/mutihash/: errors.c  hashes.c  multihash.c  multihash.h
randomx/: CMakeLists.txt
randomx/cmake/: cpu.cmake  os.cmake  randomx.cmake
randomx/src/backend/cpu/: Cpu.cpp  Cpu.h  ICpuInfo.h
randomx/src/backend/cpu/platform/: BasicCpuInfo.cpp  BasicCpuInfo.h
randomx/src/base/crypto/: Algorithm.h
randomx/src/crypto/common/: MemoryPool.cpp  MemoryPool.h  VirtualMemory.cpp  VirtualMemory_hwloc.cpp
randomx/src/crypto/randomx/: configuration.h  intrin_portable.h  jit_compiler_x86.cpp  randomx.h
test/: CMakeLists.txt
test/test_mine/: CMakeLists.txt  test_rx_mine_cache.cpp
test/test_randomx/: CMakeLists.txt  api-example2.cpp  benchmark.cpp  change_seed_nowait.cpp  code-generator.cpp  dynamic-seed.cpp  hex_util.cpp  test_randomx.cpp  test_rx_hashp.cpp  test_rx_hashs.cpp  test_rx_seedheight.cpp  tests.cpp
tests/: SearchXdagDat.sh
